[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-vies"
description = "Validate and store VAT Information Exchange System (VIES) data in Django."
readme = "README.rst"
license = "MIT"
authors = [{ name = "Johannes Hoppe", email = "info@johanneshoppe.com" }]
requires-python = ">=3.9"
dependencies = [
  "Django>=4.2",
  "retrying>=1.1.0",
  "zeep>=2.5.0",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-django",
]

[project.scripts]
compile-translations = "scripts.compile_translations:main"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
norecursedirs = ["venv", "env", ".eggs"]
addopts = "--cov=vies"
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"

[tool.coverage.run]
source = ["."]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/test_*.py",
  ".tox",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
known_first_party = ["measurement", "tests"]
atomic = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
skip-string-normalization = false

[tool.flake8]
ignore = ["E501"]
