[metadata]
name = django-vies
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Validate and store VAT Information Exchange System (VIES) data in Django.
long_description = file: README.rst
url = https://github.com/codingjoe/django-vies
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Environment :: Web Environment
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Topic :: Software Development
    Topic :: Office/Business :: Financial :: Accounting

python_requires = '>=3.6'

[options]
include_package_data = True
packages = vies
install_requires =
    Django>=2.2
    retrying>=1.1.0
    zeep>=2.5.0
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    mock
    pytest
    pytest-cov
    pytest-django

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
norecursedirs=venv env .eggs
addopts =
    --cov=vies
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .tox

[coverage:report]
show_missing = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = venv,.tox,.eggs

[pydocstyle]
add-ignore = D1

[isort]
atomic = true
line_length = 88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_first_party = measurement, tests
default_section=THIRDPARTY
combine_as_imports = true
